Polishing. Validation, DTO, unit test adjustment